--- a/templates/components/question.html
+++ b/templates/components/question.html
@@ -5,33 +5,49 @@
         <div class="d-flex justify-content-between flex-wrap">
             <div class="d-flex" style="transform: rotate(0);">
                 <img src="{% static '/img/user_picture.png' %}" height="56" class="rounded " alt="user picture">
-                <a class="card-link stretched-link fs-4 px-1 link-underline link-underline-opacity-0"
-                    href="#">{{ item.user }}</a>
+                <a class="card-link stretched-link fs-4 px-1 link-underline link-underline-opacity-0" href="#">
+                    {{ item.question.author.user.username }}
+                </a>
             </div>
-           
-            {% include 'components/rating.html' %} 
+
+            <div class="d-flex align-items-baseline m-sm-0 mt-2">
+                <button class="btn btn-outline-success"><img src="{% static '/img/upvote.png' %}" height="23"
+                        alt=""></button>
+
+                {% if item.question.rating > 0 %}
+                <p class="card-text fs-3 text-success px-1">{{ item.question.rating }}</p>
+                {% elif item.question.rating < 0 %} <p class="card-text fs-3 text-danger px-1">{{ item.question.rating }}</p>
+                {% else %}
+                <p class="card-text fs-3 text-secondary px-1">{{ item.question.rating }}</p>
+                {% endif %}
+                <button class="btn btn-outline-danger"><img src="{% static '/img/downvote.png' %}" height="23"
+                            alt=""></button>
+            </div>
 
         </div>
     </div>
     <div class="row w-100 card-body">
         <div class="mb-3" style="transform: rotate(0);">
-            <a href="{% url 'question' question_id=item.id %}" class="stretched-link link-underline link-underline-opacity-0 link-dark">
-                <h5 class="card-title">{{item.title}}</h5>
+            <a href="{% url 'question' question_id=item.question.id %}"
+                class="stretched-link link-underline link-underline-opacity-0 link-dark">
+                <h5 class="card-title">{{item.question.title}}</h5>
             </a>
-            <p class="card-text">{{item.content}}</p>
+            <p class="card-text">{{item.question.content}}</p>
         </div>
         <span class="card-text d-flex ">
             <span class="container ps-0">
                 <span class="text-body-secondary">tags:</span>
                 {% for tag_item in item.tags %}
-                
+
                 {% include 'components/tag.html' %}
 
                 {% endfor %}
             </span>
-            <a href="{% url 'question' question_id=item.id %}" class="link-underline link-underline-opacity-0">
-                answers(4)
+            <a href="{% url 'question' question_id=item.question.id %}"
+                class="link-underline link-underline-opacity-0">
+                answers
             </a>
         </span>
+
     </div>
 </div>
